grid.css
.grid-container {
  display: grid;
  grid-template-columns: 1fr 4fr;
  margin-top: 23px;
  margin-left: 5px;
  margin-right: 70px;
  margin-bottom: 20px;
}
.part_B{
	padding-right: 5px;
	padding-top: 130px;
	padding-left: 5%;
}
.header{
	display: grid;
	grid-template-columns: 1fr 4fr;
	padding-right: 5%;
}
.header_title{
	font-size: 40px;
}
.big_pic{
	width: 100%;
	padding-top: 15px;
	height: 350px;
}
.all_images{
	
	display: flex;
	flex-wrap: wrap;
}
.image1{
	height: 150px;
	width:	300px;
	margin-right: 7px;
}
.div2{
	text-align: center;
	font-size: 30px;
}
.div3{
	text-align: center;
}
.work2{
	margin-left: 12px;
}
.work3{
	margin-left: 12px;
}
.image2{
	height: 150px;
	width:	300px;
	margin-right: 7px;
}
.image3{
	height: 150px;
	width:	300px;
}

.right_col_name{
	text-align: right;

}
.header_logo{
	width: 80px;
}

.header_title{
	margin-top: 5px;
	margin-bottom: 5px;
}
.body_pic{
	margin-top: 20px;
	border-color: #7d97ad;
	border-top-width: 4px;
	border-top-style: solid;
}
.text{
	font-size: 35px;
	font-family: "Times New Roman", Times, serif;
}
.header_title{
	font-family: "Times New Roman", Times, serif;
	font-weight: normal;
}
.blue_div{
	width: 80%;
	height: 10%;
}
.blue_box{
	
    background-color: #02b3e4;   
}
.box_size{
	width: 10vh;
    height: 10vh;
    text-align: center;

}
.black_div{
	width: 80%;
	height: 10%;
}
.black_box{
	
    background-color: #2d3c49;
    margin-top: 40px;
  
}
.gray_div{
	width: 80%;
	height: 10%;
}
.gray_box{
	
    background-color: #7d97ad;
    margin-top: 40px; 
}
.color_name{
}

